--- a/Part_3_Notes_App_Backend/package.json
+++ b/Part_3_Notes_App_Backend/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "build:ui": "rm -rf build && cd ../../Part2/notes-app && npm run build && cp -r build ../Part_3_Notes_App_Backend",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
